@@ -164,7 +164,7 @@ public class PyTableCode extends PyBaseCode
         try {
             ret = funcs.call_function(func_id, frame, ts);
         } catch (Throwable t) {
-            // Convert exceptions that occured in Java code to PyExceptions
+            // Convert exceptions that occurred in Java code to PyExceptions
             PyException pye = Py.JavaError(t);
             pye.tracebackHere(frame);
 
